--- a/scss/components/_slick.scss
+++ b/scss/components/_slick.scss
@@ -57,9 +57,9 @@
     margin-top: -15px;
     width: 2.5rem;
     height: 2.5rem;
-    background-color: $primary;
+    background-color: $white;
     border-radius: 50%;
-    color: #fff;
+    color: $primary;
     font-size: 1.1rem;
     display: flex !important;
     justify-content: center;
