--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -188,7 +188,59 @@
     }
 }
 
+// Logos Margue
+.marquee-section {
+    --space: 2rem;
+    background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
+    display: grid;
+    align-content: center;
+    overflow: hidden;
+    gap: var(--space);
+    width: 100%;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    padding: 4rem 0;
+
+    .marquee {
+        --duration: 65s;
+        --gap: var(--space);
+        display: flex;
+        overflow: hidden;
+        user-select: none;
+        gap: 2.4rem;
+
+        .marquee_group {
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            gap: var(--gap);
+            min-width: 100%;
+            animation: scroll var(--duration) linear infinite;
+
+            @keyframes scroll {
+                0% {
+                    transform: translateX(0);
+                }
+
+                100% {
+                    transform: translateX(calc(-100% - var(--gap)));
+                }
+            }
+
+            img {
+                max-width: 12rem;
+                object-fit: contain;
+                filter: contrast(1);
+                mix-blend-mode: multiply;
+
+            }
+        }
+    }
+}
+
 // Services
+
 .services {
     .flex {
         display: grid;
@@ -257,6 +309,420 @@
         }
     }
 }
+
+
+// About Us
+.about-us-cta {
+    background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
+        opacity: 0.15;
+        z-index: 0;
+    }
+
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        position: relative;
+        z-index: 2;
+
+        @media (max-width: 1200px) {
+            flex-direction: column;
+        }
+
+        .info-div {
+            width: 60%;
+            padding: 3rem 0;
+
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
+
+            .header {
+                font-size: 48px;
+                font-weight: 700;
+                text-transform: capitalize;
+                margin-bottom: 1rem;
+                color: $white;
+
+                @media (max-width: 576px) {
+                    font-size: 36px;
+                }
+            }
+
+            .info {
+                font-size: 17px;
+                color: $white;
+                font-weight: 400;
+                margin-bottom: 1rem;
+            }
+        }
+
+        .img-div {
+            width: 40%;
+            display: flex;
+            justify-content: center;
+            border-radius: 12px;
+            position: relative;
+
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
+
+            .main-img {
+                max-height: 450px;
+                width: 100%;
+                object-fit: contain;
+                z-index: 1;
+
+                @media (max-width: 1200px) {
+                    width: fit-content;
+                    max-width: 100%;
+                    margin-right: auto;
+                }
+            }
+        }
+    }
+}
+
+// What we do
+.what-we-do {
+    .flex {
+        display: flex;
+        gap: 2rem;
+
+        @media (max-width: 1200px) {
+            flex-direction: column;
+        }
+
+        .heading-side {
+            width: 50%;
+
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
+        }
+
+        .items {
+            width: 50%;
+            display: flex;
+            justify-content: space-between;
+            gap: 2rem;
+
+            .item{
+                width: 100%;
+            }
+
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
+
+            @media (max-width: 576px) {
+                flex-direction: column;
+            }
+        }
+    }
+
+    .items-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+        margin-top: 2rem;
+
+        @media (max-width: 1200px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 576px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+    .item {
+        padding: 1rem 1.4rem;
+        border-radius: 12px;
+        border: 2px solid $primary;
+
+        .logo-div {
+            width: 3.5rem;
+            height: 3.5rem;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $primary;
+            margin-bottom: 1.5rem;
+
+            i {
+                color: $white;
+            }
+        }
+
+        .title {
+            font-size: 22px;
+            font-weight: 600;
+        }
+
+        .info {
+            font-size: 16px;
+            margin-bottom: 1rem;
+        }
+
+        .pill-btn {
+            margin-top: 1rem;
+
+            .icon-div-small {
+                width: 2rem;
+                height: 2rem;
+                min-width: 2rem;
+                min-height: 2rem;
+
+                i {
+                    font-size: 16px;
+                }
+            }
+        }
+
+        .link {
+            color: $primary;
+            margin-top: 2rem;
+            text-decoration: underline !important;
+        }
+    }
+}
+
+// Our Expertise
+.our-expertise {
+    padding: 5rem 0;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('/img/texture-1.png');
+        opacity: 0.1;
+        z-index: -1;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: $primary;
+        z-index: -2;
+    }
+
+    .header {
+        font-size: 45px;
+    }
+
+    ::-webkit-scrollbar {
+        height: 0px;
+        opacity: 0.0;
+    }
+
+    .expertise-navs {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        overflow-x: scroll;
+
+        @media (max-width: 768px) {
+            width: 100%;
+        }
+
+        .active {
+            z-index: 2;
+            position: relative;
+            transition: all ease 0.8s;
+
+            &::after {
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 3px;
+                background-color: $secondary;
+                z-index: 1;
+                bottom: 0;
+                transition: all ease 0.8s;
+            }
+        }
+
+        li {
+            list-style-type: none !important;
+            width: 25%;
+            position: relative;
+            padding: 0 0.3rem;
+
+            @media (max-width: 992px) {
+                width: 35%;
+                min-width: 35%;
+            }
+
+            @media (max-width: 576px) {
+                width: 47%;
+                min-width: 47%;
+            }
+
+            @media (max-width: 450px) {
+                width: 100%;
+                min-width: 100%;
+            }
+
+            &::after {
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 3px;
+                background-color: $white;
+                z-index: 0;
+                bottom: 0;
+                left: 0;
+            }
+
+            .flex {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                padding-bottom: 1rem;
+
+                .img-div {
+                    width: 4.5rem;
+
+                    @media (max-width: 576px) {
+                        width: 4rem;
+                    }
+
+                    img {
+                        width: 100%;
+                    }
+                }
+
+                .heading-div {
+                    .heading {
+                        font-size: 23px;
+                        text-align: center;
+                        color: $white;
+
+                        @media (min-width: 1440px) {
+                            font-size: 28px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .tab-content {
+        .tab-pane {
+            margin-top: 2rem;
+
+            .flex {
+                display: flex;
+                justify-content: space-between;
+                gap: 2rem;
+                align-items: center;
+
+                @media (max-width: 1200px) {
+                    flex-direction: column;
+
+                }
+
+                .info-div {
+                    width: 50%;
+
+                    @media (max-width: 1200px) {
+                        width: 100%;
+                    }
+
+                    .heading {
+                        font-size: 36px;
+                        font-weight: 600;
+                        color: $white;
+                        margin-bottom: 1rem;
+
+                        @media (min-width: 1440px) {
+                            font-weight: 40px;
+                        }
+                    }
+
+                    .info {
+                        font-size: 18px;
+                        color: $white;
+                        margin-bottom: 2rem;
+                    }
+
+                    ul {
+                        display: grid;
+                        grid-template-columns: repeat(2, 1fr);
+                        row-gap: 0.5rem;
+                        margin-bottom: 2rem;
+                        margin-left: 0;
+                        padding-left: 0.2rem;
+
+                        @media (max-width: 576px) {
+                            grid-template-columns: repeat(1, 1fr);
+                        }
+
+                        li {
+                            color: $white;
+                            list-style-type: none;
+                            font-size: 18px;
+                            display: flex;
+                            align-items: top;
+
+                            i {
+                                color: $secondary;
+                                margin-right: 0.5rem;
+                                padding-top: 4px;
+                            }
+                        }
+                    }
+                }
+
+                .img-div {
+                    width: 50%;
+
+                    @media (max-width: 1200px) {
+                        width: 100%;
+                        margin-top: 1rem;
+                    }
+
+                    img {
+                        height: 450px;
+                        object-fit: cover;
+                        width: 100%;
+                        border-radius: 12px;
+
+                        @media (max-width: 1200px) {
+                            height: 100%;
+                            max-height: 450px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 
 // Social Media Ratings
 .ratings-div {
