--- a/css/index.css
+++ b/css/index.css
@@ -13447,7 +13447,7 @@ nav .nav-cta-div .nav-cta:hover {
   text-indent: -9999px;
 }
 .slick-dots li.slick-active button {
-  background-color: #0c5b84;
+  background-color: #db6b24;
   width: 2rem;
   border-radius: 20px;
 }
@@ -13688,7 +13688,6 @@ nav .nav-cta-div .nav-cta:hover {
 
 .marquee-section {
   --space: 2rem;
-  background: linear-gradient(183deg, rgb(51, 135, 179) 0%, rgb(12, 91, 132) 16%, rgb(7, 64, 94) 90%);
   display: grid;
   align-content: center;
   overflow: hidden;
@@ -13788,7 +13787,7 @@ nav .nav-cta-div .nav-cta:hover {
 }
 
 .about-us-cta {
-  background: linear-gradient(183deg, rgb(51, 135, 179) 0%, rgb(12, 91, 132) 16%, rgb(7, 64, 94) 90%);
+  background: linear-gradient(277deg, rgb(51, 135, 179) 0%, rgb(12, 91, 132) 16%, rgb(3, 46, 69) 90%);
   position: relative;
 }
 .about-us-cta::before {
@@ -13798,7 +13797,7 @@ nav .nav-cta-div .nav-cta:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(183deg, rgb(51, 135, 179) 0%, rgb(12, 91, 132) 16%, rgb(7, 64, 94) 90%);
+  background: linear-gradient(277deg, rgb(51, 135, 179) 0%, rgb(12, 91, 132) 16%, rgb(3, 46, 69) 90%);
   opacity: 0.15;
   z-index: 0;
 }
@@ -13985,7 +13984,8 @@ nav .nav-cta-div .nav-cta:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #0c5b84;
+  background: rgb(51, 135, 179);
+  background: linear-gradient(277deg, rgb(51, 135, 179) 0%, rgb(12, 91, 132) 16%, rgb(3, 46, 69) 90%);
   z-index: -2;
 }
 .our-expertise .header {
