--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -191,7 +191,7 @@
 // Logos Margue
 .marquee-section {
     --space: 2rem;
-    background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
+    // background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
     display: grid;
     align-content: center;
     overflow: hidden;
@@ -313,7 +313,7 @@
 
 // About Us
 .about-us-cta {
-    background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
+    background: linear-gradient(277deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(3,46,69,1) 90%);
     position: relative;
 
     &::before {
@@ -323,7 +323,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(183deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(7,64,94,1) 90%);
+        background: linear-gradient(277deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(3,46,69,1) 90%);
         opacity: 0.15;
         z-index: 0;
     }
@@ -396,6 +396,7 @@
 
 // What we do
 .what-we-do {
+    
     .flex {
         display: flex;
         gap: 2rem;
@@ -524,7 +525,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: $primary;
+        background: rgb(51,135,179);
+        background: linear-gradient(277deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(3,46,69,1) 90%);
         z-index: -2;
     }
 
