--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -300,7 +300,7 @@
                 margin-bottom: 0.5rem;
             }
 
-            a {
+            .read-more {
                 color: $secondary;
                 font-size: 16px;
                 font-weight: 500;
@@ -313,7 +313,7 @@
 
 // About Us
 .about-us-cta {
-    background: linear-gradient(277deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(3,46,69,1) 90%);
+    background: linear-gradient(277deg, rgba(51, 135, 179, 1) 0%, rgba(12, 91, 132, 1) 16%, rgba(3, 46, 69, 1) 90%);
     position: relative;
 
     &::before {
@@ -323,7 +323,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(277deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(3,46,69,1) 90%);
+        background: linear-gradient(277deg, rgba(51, 135, 179, 1) 0%, rgba(12, 91, 132, 1) 16%, rgba(3, 46, 69, 1) 90%);
         opacity: 0.15;
         z-index: 0;
     }
@@ -396,7 +396,7 @@
 
 // What we do
 .what-we-do {
-    
+
     .flex {
         display: flex;
         gap: 2rem;
@@ -419,7 +419,7 @@
             justify-content: space-between;
             gap: 2rem;
 
-            .item{
+            .item {
                 width: 100%;
             }
 
@@ -501,6 +501,157 @@
     }
 }
 
+// Development process
+.development-process {
+    .main-layout {
+        position: relative;
+        width: 600px; // Adjust the size as needed
+        height: 600px;
+        margin: 0 auto;
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 85%;
+            height: 85%;
+            border: 5px solid $primary;
+            border-radius: 50%;
+            opacity: 0.15;
+            z-index: -1;
+        }
+
+        .circle {
+            position: absolute;
+            width: 6rem; // Increase circle size
+            height: 6rem;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white; // Transparent background by default
+            border: 5px solid $primary; // Border outline
+            color: $primary; // Primary color for icons
+            font-size: 2rem; // Increase icon size
+            font-weight: 600;
+            margin-bottom: 1rem;
+            transition: background-color 0.3s, color 0.3s;
+
+            &.active {
+                background-color: $primary; // Background color when active
+                color: $white; // Icon color when active
+                border-color: $primary; // Border color when active
+            }
+
+            @for $i from 1 through 6 {
+                &:nth-child(#{$i}) {
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(250px) rotate(-#{($i - 1) * 60}deg);
+                }
+
+                &:nth-child(1) {
+                    // Position the first circle icon at the top
+                    transform: translate(-50%, -50%) rotate(0deg) translate(250px) rotate(0deg);
+                }
+            }
+        }
+
+        .description {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+            padding: 20px;
+            border-radius: 10px;
+            display: none; // Hidden by default
+            z-index: 10;
+            width: 200px; // Adjust width as needed
+            text-align: center;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .main-layout {
+            max-width: 300px;
+            height: 300px;
+        }
+
+        .circle {
+            width: 80px;
+            height: 80px;
+
+            i {
+                font-size: 36px;
+            }
+
+            @for $i from 1 through 6 {
+                &:nth-child(#{$i}) {
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(180px) rotate(-#{($i - 1) * 60}deg);
+                }
+            }
+        }
+
+        .description {
+            width: 150px; // Adjust width for smaller screens
+            font-size: 18px;
+        }
+    }
+
+    @media (max-width: 480px) {
+        .main-layout {
+            max-width: 200px;
+            height: 200px;
+        }
+
+        .circle {
+            width: 60px;
+            height: 60px;
+
+            i {
+                font-size: 24px;
+            }
+
+            @for $i from 1 through 6 {
+                &:nth-child(#{$i}) {
+                    transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(90px) rotate(-#{($i - 1) * 60}deg);
+                }
+            }
+        }
+
+        .description {
+            width: 120px; // Adjust width for mobile screens
+            font-size: 14px;
+        }
+    }
+}
+
+.roadmap {
+    .flex {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+
+        .item {
+            display: grid;
+            gap: 4rem;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+
+    }
+}
+
+
+
+
 // Our Expertise
 .our-expertise {
     padding: 5rem 0;
@@ -525,8 +676,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgb(51,135,179);
-        background: linear-gradient(277deg, rgba(51,135,179,1) 0%, rgba(12,91,132,1) 16%, rgba(3,46,69,1) 90%);
+        background: rgb(51, 135, 179);
+        background: linear-gradient(277deg, rgba(51, 135, 179, 1) 0%, rgba(12, 91, 132, 1) 16%, rgba(3, 46, 69, 1) 90%);
         z-index: -2;
     }
 
