--- a/scss/components/_slick.scss
+++ b/scss/components/_slick.scss
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 1rem 0;
     list-style-type: none;
+    cursor: pointer;
 
     li {
         margin: 0 0.25rem;
@@ -65,6 +66,7 @@
     justify-content: center;
     align-items: center;
     z-index: 100;
+    cursor: pointer;
 }
 
 .left-arrow {
