--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -62,7 +62,12 @@
             padding: 6rem 0rem 9rem;
 
             @media (max-width: 1200px) {
-                padding: 3rem 0rem 9rem;
+                padding: 3rem 0rem 5rem;
+            }
+
+            @media (max-width: 576px) {
+                padding: 3rem 0.8rem 5rem;
+
             }
         }
 
@@ -72,7 +77,7 @@
             text-transform: capitalize;
             color: $white;
             text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-            font-weight: 400;
+            font-weight: 600;
             font-size: 52px;
             line-height: 60px;
             margin-bottom: 2.5rem;
@@ -81,10 +86,15 @@
                 font-size: 45px;
             }
 
+            @media (max-width: 992px) {
+                font-size: 45px;
+            }
+
             @media (max-width: 768px) {
                 width: 100%;
                 padding: 0 0rem;
-                font-size: 40px;
+                font-size: 35px;
+                line-height: 45px;
 
                 span {
                     font-size: 35px;
@@ -247,6 +257,14 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
 
+        @media (max-width: 992px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 576px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
+
         .column {
             .img-div {
                 position: relative;
@@ -375,7 +393,8 @@
             position: relative;
 
             @media (max-width: 1200px) {
-                width: 100%;
+             
+                display: none;
             }
 
             .main-img {
@@ -502,11 +521,146 @@
 }
 
 // Development process
+// .development-process {
+//     .main-layout {
+//         position: relative;
+//         width: 600px; // Adjust the size as needed
+//         height: 600px;
+//         margin: 0 auto;
+
+//         &::after {
+//             content: "";
+//             position: absolute;
+//             top: 50%;
+//             left: 50%;
+//             transform: translate(-50%, -50%);
+//             width: 85%;
+//             height: 85%;
+//             border: 5px solid $primary;
+//             border-radius: 50%;
+//             opacity: 0.15;
+//             z-index: -1;
+//         }
+
+//         .circle {
+//             position: absolute;
+//             width: 6rem; // Increase circle size
+//             height: 6rem;
+//             border-radius: 50%;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             background-color: white; // Transparent background by default
+//             border: 5px solid $primary; // Border outline
+//             color: $primary; // Primary color for icons
+//             font-size: 2rem; // Increase icon size
+//             font-weight: 600;
+//             margin-bottom: 1rem;
+//             transition: background-color 0.3s, color 0.3s;
+//             cursor: pointer;
+
+//             &.active {
+//                 background-color: $primary; // Background color when active
+//                 color: $white; // Icon color when active
+//                 border-color: $primary; // Border color when active
+//             }
+
+//             @for $i from 1 through 6 {
+//                 &:nth-child(#{$i}) {
+//                     top: 50%;
+//                     left: 50%;
+//                     transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(250px) rotate(-#{($i - 1) * 60}deg);
+//                 }
+
+//                 &:nth-child(1) {
+//                     // Position the first circle icon at the top
+//                     transform: translate(-50%, -50%) rotate(0deg) translate(250px) rotate(0deg);
+//                 }
+//             }
+//         }
+
+//         .description {
+//             position: absolute;
+//             top: 50%;
+//             left: 50%;
+//             transform: translate(-50%, -50%);
+//             font-size: 24px;
+//             font-weight: bold;
+//             color: #333;
+//             padding: 20px;
+//             border-radius: 10px;
+//             display: none; // Hidden by default
+//             z-index: 10;
+//             width: 200px; // Adjust width as needed
+//             text-align: center;
+//         }
+//     }
+
+//     @media (max-width: 768px) {
+//         .main-layout {
+//             max-width: 500px;
+//             height: 500px;
+//         }
+
+//         .circle {
+//             width: 80px;
+//             height: 80px;
+
+//             i {
+//                 font-size: 36px;
+//             }
+
+//             @for $i from 1 through 6 {
+//                 &:nth-child(#{$i}) {
+//                     top: 50%;
+//                     left: 50%;
+//                     transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(180px) rotate(-#{($i - 1) * 60}deg);
+//                 }
+//             }
+//         }
+
+//         .description {
+//             width: 150px; // Adjust width for smaller screens
+//             font-size: 18px;
+//         }
+//     }
+
+//     @media (max-width: 480px) {
+//         .main-layout {
+//             max-width: 200px;
+//             height: 200px;
+//         }
+
+//         .circle {
+//             width: 60px;
+//             height: 60px;
+
+//             i {
+//                 font-size: 24px;
+//             }
+
+//             @for $i from 1 through 6 {
+//                 &:nth-child(#{$i}) {
+//                     transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(90px) rotate(-#{($i - 1) * 60}deg);
+//                 }
+//             }
+//         }
+
+//         .description {
+//             width: 120px; // Adjust width for mobile screens
+//             font-size: 14px;
+//         }
+//     }
+// }
+
+// Development process
 .development-process {
     .main-layout {
         position: relative;
-        width: 600px; // Adjust the size as needed
-        height: 600px;
+        width: 600px; // Responsive width
+        height: 600px; // Responsive height (aspect ratio 1:1)
+        max-width: 600px; // Max width for larger screens
+        max-height: 600px; // Max height for larger screens
         margin: 0 auto;
 
         &::after {
@@ -525,7 +679,7 @@
 
         .circle {
             position: absolute;
-            width: 6rem; // Increase circle size
+            width: 6rem; // Default size
             height: 6rem;
             border-radius: 50%;
             display: flex;
@@ -534,10 +688,11 @@
             background-color: white; // Transparent background by default
             border: 5px solid $primary; // Border outline
             color: $primary; // Primary color for icons
-            font-size: 2rem; // Increase icon size
+            font-size: 2rem; // Default icon size
             font-weight: 600;
             margin-bottom: 1rem;
             transition: background-color 0.3s, color 0.3s;
+            cursor: pointer;
 
             &.active {
                 background-color: $primary; // Background color when active
@@ -564,85 +719,218 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 24px;
+            font-size: 1.5rem; // Responsive font size
             font-weight: bold;
             color: #333;
-            padding: 20px;
+            padding: 1rem; // Adjust padding for responsiveness
             border-radius: 10px;
             display: none; // Hidden by default
             z-index: 10;
-            width: 200px; // Adjust width as needed
+            width: 70%; // Responsive width
+            max-width: 300px; // Max width for larger screens
             text-align: center;
         }
     }
 
     @media (max-width: 768px) {
         .main-layout {
-            max-width: 300px;
-            height: 300px;
-        }
+            width: 500px; // Adjust for medium screens
+            height: 500px; // Maintain aspect ratio
 
-        .circle {
-            width: 80px;
-            height: 80px;
-
-            i {
-                font-size: 36px;
+            &::after {
+                width: 90%;
+                height: 90%;
             }
 
-            @for $i from 1 through 6 {
-                &:nth-child(#{$i}) {
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(180px) rotate(-#{($i - 1) * 60}deg);
+            .circle {
+                width: 4rem; // Smaller circle size for medium screens
+                height: 4rem;
+                font-size: 1.5rem; // Smaller icon size for medium screens
+
+                @for $i from 1 through 6 {
+                    &:nth-child(#{$i}) {
+                        transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(220px) rotate(-#{($i - 1) * 60}deg); // Adjust size
+                    }
                 }
             }
-        }
 
-        .description {
-            width: 150px; // Adjust width for smaller screens
-            font-size: 18px;
+            .description {
+                font-size: 1.2rem; // Adjust font size for smaller screens
+                padding: 0.8rem; // Adjust padding
+                width: 80%; // Responsive width
+                max-width: 250px; // Max width for smaller screens
+            }
         }
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 576px) {
         .main-layout {
-            max-width: 200px;
-            height: 200px;
-        }
+            width: 350px; // Adjust for medium screens
+            height: 350px; // Maintain aspect ratio
 
-        .circle {
-            width: 60px;
-            height: 60px;
-
-            i {
-                font-size: 24px;
+            &::after {
+                width: 90%;
+                height: 90%;
             }
 
-            @for $i from 1 through 6 {
-                &:nth-child(#{$i}) {
-                    transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(90px) rotate(-#{($i - 1) * 60}deg);
+            .circle {
+                width: 3rem; // Even smaller circle size for smaller screens
+                height: 3rem;
+                font-size: 1rem; // Even smaller icon size
+
+                @for $i from 1 through 6 {
+                    &:nth-child(#{$i}) {
+                        transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(160px) rotate(-#{($i - 1) * 60}deg); // Adjust size
+                    }
                 }
             }
-        }
 
-        .description {
-            width: 120px; // Adjust width for mobile screens
-            font-size: 14px;
+            .description {
+                font-size: 1rem; // Adjust font size
+                padding: 0.5rem; // Adjust padding
+                width: 90%; // Responsive width
+                max-width: 200px; // Max width for smaller screens
+            }
+        }
+    }
+
+    @media (max-width: 386px) {
+        .main-layout {
+            width: 220px; // Adjust for medium screens
+            height: 220px; // Maintain aspect ratio
+
+            &::after {
+                width: 90%;
+                height: 90%;
+            }
+
+            .circle {
+                width: 3rem; // Even smaller circle size for smaller screens
+                height: 3rem;
+                font-size: 1rem; // Even smaller icon size
+
+                @for $i from 1 through 6 {
+                    &:nth-child(#{$i}) {
+                        transform: translate(-50%, -50%) rotate(#{($i - 1) * 60}deg) translate(100px) rotate(-#{($i - 1) * 60}deg); // Adjust size
+                    }
+                }
+            }
+
+            .description {
+                font-size: 1rem; // Adjust font size
+                padding: 0.5rem; // Adjust padding
+                width: 80%; // Responsive width
+                max-width: 200px; // Max width for smaller screens
+            }
         }
     }
 }
+
 
 .roadmap {
     .flex {
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 4rem;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 0.3rem;
+            height: 100%;
+            background-color: $primary;
+            opacity: 0.15;
+            z-index: -1;
+
+            @media (max-width: 992px) {
+                display: none;
+            }
+        }
 
         .item {
-            display: grid;
-            gap: 4rem;
-            grid-template-columns: repeat(2, 1fr);
+            display: flex;
+            gap: 8rem;
+            align-items: stretch;
+            position: relative;
+
+            .circle {
+                position: absolute;
+                background-color: $primary;
+                width: 5rem;
+                height: 5rem;
+                color: $white;
+                font-size: 32px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                top: 2rem;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                @media (max-width: 992px) {
+                    left: 0;
+                    background-color: $secondary;
+                }
+
+                @media (max-width: 576px) {
+                   display: none;
+                }
+            }
+            
+
+            .img-div {
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex: 1 1 auto;
+
+                @media (max-width: 992px) {
+                    display: none;
+                }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 12px;
+                }
+            }
+
+            .info-div {
+                flex: 2 1 auto;
+                padding: 40px;
+                background-color: $primary;
+                color: $white;
+                width: 50%;
+                border-radius: 12px;
+
+                @media (max-width: 992px) {
+                    width: 80%;
+                }
+
+                h4 {
+                    font-size: 32px;
+                    font-weight: 600;
+                    margin-bottom: 1rem
+                }
+
+                @media (max-width: 576px) {
+                    padding: 30px 15px;
+                }
+            }
+
+            &:nth-of-type(odd) {
+                flex-direction: row-reverse;
+
+                @media (max-width: 992px) {
+                    flex-direction: row;
+                }
+            }
         }
 
 
