--- a/css/index.css
+++ b/css/index.css
@@ -13178,6 +13178,22 @@ nav .nav-cta-div .nav-cta:hover {
   }
 }
 
+.stacked-nav {
+  background-color: #212529;
+}
+@media (max-width: 1200px) {
+  .stacked-nav {
+    display: none;
+  }
+}
+.stacked-nav ul {
+  padding: 0.5rem 0;
+  gap: 2.5rem;
+}
+.stacked-nav ul li {
+  color: #f8f8f8;
+}
+
 .primary-button {
   font-family: "Ropa Sans", sans-serif;
   color: white;
@@ -13652,7 +13668,7 @@ nav .nav-cta-div .nav-cta:hover {
 .nav-hero .hero::after {
   position: absolute;
   content: "";
-  background: linear-gradient(90deg, rgb(7, 44, 64) 0%, rgba(5, 40, 59, 0.7848389356) 39%, rgba(2, 29, 43, 0.0677521008) 55%);
+  background: linear-gradient(90deg, rgb(7, 44, 64) 0%, rgba(5, 40, 59, 0.7848389356) 39%, rgba(2, 29, 43, 0.6367752101) 55%);
   width: 100%;
   height: 100%;
   top: 0;
@@ -15650,7 +15666,7 @@ footer .footer-col .text-info p a {
 
 .contact-bars .flex {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   min-height: 15rem;
   gap: 0;
   border-radius: 12px;
@@ -15673,7 +15689,7 @@ footer .footer-col .text-info p a {
   padding: 2rem 1rem;
 }
 .contact-bars .flex .column:nth-of-type(even) {
-  background-color: #d61c1c;
+  background-color: #0e4f72;
 }
 .contact-bars .flex .column:nth-of-type(odd) {
   background-color: #0c5b84;
