--- a/css/index.css
+++ b/css/index.css
@@ -13723,7 +13723,7 @@ nav .nav-cta-div .nav-cta:hover {
   width: 100%;
   font-size: 1.5rem;
   line-height: 1.5;
-  padding: 4rem 0;
+  padding: 4rem 0 2rem;
 }
 .marquee-section .marquee {
   --duration: 65s;
@@ -13753,8 +13753,9 @@ nav .nav-cta-div .nav-cta:hover {
 .marquee-section .marquee .marquee_group img {
   max-width: 12rem;
   object-fit: contain;
-  filter: contrast(1);
   mix-blend-mode: multiply;
+  filter: grayscale(1);
+  max-height: 5rem;
 }
 
 .services .flex {
